syntax = "proto3";

message AggregatedRecord {
  repeated string partition_key_table     = 1;
  repeated string explicit_hash_key_table = 2;
  repeated Record records                 = 3;
}

message Tag {
  string key   = 1;
  string value = 2;
}

message Record {
  uint64 partition_key_index     = 1;
  uint64 explicit_hash_key_index = 2;
  bytes  data                    = 3;
  repeated Tag    tags                    = 4;
}
